--- a/Ejercitacion_MercadoLiebre/views/home.html
+++ b/Ejercitacion_MercadoLiebre/views/home.html
@@ -61,176 +61,163 @@
             </div>  
             <div>   
                 <img src="/images/img-home-banner.jpg" 
-                    width="100%"
-                    alt="Banner"/>
+                     alt="Banner"
+                     width="100%"/>
             </div>
         </header>
-        <main>
+        <main >
             <section>
-                <div>
-                    <h2 class="titular">Basado en tu ultima visita</h2>
-                </div>
-                <div class="article">
-                    <div>
-                        <img src="/images/img-cafetera-moulinex.jpg" 
-                            alt="Cafetera" 
-                            width="100%" />
-                    </div>
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
-                    </div>
-                    <div>
-                        <p class="precio">$6.770</p>
-                    </div>
-                    <div>
-                        <p class="descuento">40% off</p> 
-                    </div>
-                    <div>
-                        <h3 class="name"> Cafetera Moulinex </h3>
-                    </div>
-                </div>
-                <div class="article">
-                    <div>
-                        <img src="/images/img-macbook-pro-2019.jpg" 
-                        alt="MacBook" 
-                        width="100%" />  
-                    </div>
+                <h2 class="titular">Basado en tu ultima visita</h2>
+                <div class="articulos">
+                    <div class="article">
+                        <div>
+                            <img src="/images/img-cafetera-moulinex.jpg" 
+                                alt="Cafetera" 
+                            />
+                        </div>
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information"  width="50%">
+                            <p class="precio">$6.770</p>
+                            <p class="descuento">40% off</p>     
+                        </div>
                         
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
+                        <div >
+                            <h3 class="name"> Cafetera Moulinex </h3>
+                        </div>
                     </div>
-                    <div>
-                        <p class="precio">$230.000</p>
+                    <div class="article">
+                        <div>
+                            <img src="/images/img-macbook-pro-2019.jpg" 
+                            alt="MacBook" 
+                        />  
+                        </div>
+                            
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information"       width="50%">
+                            <p class="precio" >$230.000</p>
+                            <p class="descuento">20% off</p> 
+                        </div>            
+                        <div >
+                            <h3 class="name"> MacBook Pro 2019 </h3>
+                        </div>
                     </div>
-                    <div>
-                        <p class="descuento">20% off</p> 
-                    </div>            
-                    <div>
-                        <h3 class="name"> MacBook Pro 2019 </h3>
+                    <div class="article">
+                        <div>
+                            <img src="/images/img-samsung-galaxy-s10.jpg" 
+                            alt="SG-s10" 
+                            />               
+                        </div>
+                        
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information"      width="50%">
+                            <p class="precio" >$230.000</p>
+                            <p class="descuento">20% off</p> 
+                        </div>            
+                        <div >
+                            <h3 class="name"> MacBook Pro 2019 </h3>
+                        </div>
                     </div>
-                </div>
-                <div class="article">
-                    <div>
-                        <img src="/images/img-samsung-galaxy-s10.jpg" 
-                        alt="SG-s10" 
-                        width="100%"/>               
-                    </div>
-                    
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
-                    </div>
-                    <div>
-                        <p class="precio">$230.000</p>
-                    </div>
-                    <div>
-                        <p class="descuento">20% off</p> 
-                    </div>            
-                    <div>
-                        <h3 class="name"> MacBook Pro 2019 </h3>
-                    </div>
-                </div>
-                <div class = "article">
-                    <div>
-                        <img src="/images/img-tv-samsung-smart.jpg" 
-                        alt="SmartTV" 
-                        width="100%" />               
-                    </div>
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
-                    </div>
-                    <div>
-                        <p class="precio">$230.000</p>
-                    </div>
-                    <div>
-                        <p class="descuento">20% off</p> 
-                    </div>            
-                    <div>
-                        <h3 class="name"> MacBook Pro 2019 </h3>
-                    </div>
-                </div>                                
+                    <div class = "article">
+                        <div>
+                            <img src="/images/img-tv-samsung-smart.jpg" 
+                            alt="SmartTV" 
+                        />               
+                        </div>
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information"     width="50%">
+                            <p class="precio" >$230.000</p>
+                            <p class="descuento">20% off</p> 
+                        </div>            
+                        <div >
+                            <h3 class="name"> MacBook Pro 2019 </h3>
+                        </div>
+                    </div>  
+                </div>                  
             </section>
             <section>
-                <div>
-                    <h2 class="titular">Basado en tu ultima visita</h2>
-                </div>
-                <div class = "article">
-                    <div>
-                        <img src="/images/img-cafetera-moulinex.jpg" 
-                            alt="Cafetera" 
-                            width="100%" />
+                <h2 class="titular">Ofertas para ti</h2>
+                <div class="articulos">
+                    <div class = "article">
+                        <div>
+                            <img src="/images/img-cafetera-moulinex.jpg" 
+                                alt="Cafetera" 
+                            />
+                        </div>
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information"    width="50%">
+                            <p class="precio" >$6.770</p>
+                            <p class="descuento">40% off</p> 
+                        </div>
+                        <div >
+                            <h3 class="name"> Cafetera Moulinex </h3>
+                        </div>
                     </div>
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
+                    <div class = "article">
+                        <div>
+                            <img src="/images/img-macbook-pro-2019.jpg" 
+                            alt="MacBook" 
+                        />  
+                        </div>
+                            
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information"   width="50%">
+                            <p class= "precio">$230.000</p>
+                            <p class="descuento" >20% off</p> 
+                        </div>            
+                        <div >
+                            <h3 class="name"> MacBook Pro 2019 </h3>
+                        </div>
                     </div>
-                    <div>
-                        <p class="precio">$6.770</p>
-                    </div>
-                    <div>
-                        <p class="descuento">40% off</p> 
-                    </div>
-                    <div>
-                        <h3 class="name"> Cafetera Moulinex </h3>
-                    </div>
-                </div>
-                <div class = "article">
-                    <div>
-                        <img src="/images/img-macbook-pro-2019.jpg" 
-                        alt="MacBook" 
-                        width="100%" />  
-                    </div>
+                    <div class = "article">
+                        <div>
+                            <img src="/images/img-samsung-galaxy-s10.jpg" 
+                            alt="SG-s10" 
+                        >               
+                        </div>
                         
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information"  width="50%">
+                            <p class="precio" >$230.000</p>
+                            <p class="descuento">20% off</p> 
+                        </div>            
+                        <div >
+                            <h3 class="name"> MacBook Pro 2019 </h3>
+                        </div>
                     </div>
-                    <div>
-                        <p class="precio">$230.000</p>
-                    </div>
-                    <div>
-                        <p class="descuento">20% off</p> 
-                    </div>            
-                    <div>
-                        <h3 class="name"> MacBook Pro 2019 </h3>
-                    </div>
-                </div>
-                <div class = "article">
-                    <div>
-                        <img src="/images/img-samsung-galaxy-s10.jpg" 
-                        alt="SG-s10" 
-                        width="100%"/>               
-                    </div>
-                    
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
-                    </div>
-                    <div>
-                        <p class="precio">$230.000</p>
-                    </div>
-                    <div>
-                        <p class="descuento">20% off</p> 
-                    </div>            
-                    <div>
-                        <h3 class="name"> MacBook Pro 2019 </h3>
+                    <div class = "article">
+                        <div>
+                            <img src="/images/img-tv-samsung-smart.jpg" 
+                            alt="SmartTV" 
+                        />               
+                        </div>
+                        <div class="logoEnvio">
+                            <i class="fas fa-dolly"></i>
+                        </div>
+                        <div class="information" width="50%">
+                            
+                            <p class="precio" >$230.000</p>
+                            <p class="descuento">20% off</p> 
+                        </div>            
+                        <div >
+                            <h3 class="name"> MacBook Pro 2019 </h3>
+                        </div>
                     </div>
                 </div>
-                <div class = "article">
-                    <div>
-                        <img src="/images/img-tv-samsung-smart.jpg" 
-                        alt="SmartTV" 
-                        width="100%" />               
-                    </div>
-                    <div class="logoEnvio">
-                        <i class="fas fa-dolly"></i>
-                    </div>
-                    <div>
-                        <p class="precio">$230.000</p>
-                    </div>
-                    <div>
-                        <p class="descuento">20% off</p> 
-                    </div>            
-                    <div>
-                        <h3 class="name"> MacBook Pro 2019 </h3>
-                    </div>
-                </div> 
+                 
             </section>
         </main>
         <footer>
