actualización de MercadoLiebre

--- a/Ejercitacion_MercadoLiebre/public/css/styles.css
+++ b/Ejercitacion_MercadoLiebre/public/css/styles.css
@@ -19,45 +19,59 @@ header{
     align-items: center;
 }
 
-#logo{
-    width:45%;}
-
-#search-bar{
-    margin: 10px;
-    padding: 0px;
-    overflow: hidden;
-    width:45%;
-}
+#logo{width:45%;}
 
 
 #credito{text-align: center;}
 
-html .register form{
+
+header .register form{
     display: flex;
     align-items: center; 
     flex-direction: column;
 }
-html .login form{
+
+
+header .login form{
     display: flex;
     align-items: center; 
     flex-direction: column;
 }
+
+
+
 
 /*commentario*/
-form{
+header .form{
+    background-color: #FFF;
     display: flex;
     align-items: flex-end;
+    font-size:3vw;
+    text-align: center;
+    
+    color: #666;
 }
 
-form input[type=text] {
-    padding: 3px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 1px;
-    width: 80%;
-  }
-form input[type=button]{
-    width: 10%;
+header .form input{
+    padding: 2px;
+    border: 1px solid #000;
+    outline: none;
+    width: 90%;
+}
+
+header .form .submit{
+    padding: 2px;
+    border: 1px solid #000;
+    width: 12.5%;
+    background-color: #FFF;
+    color:#888;
+    transition-property:background-color,color;
+    transition-duration: 500ms;
+}
+
+header .form .submit:hover{
+    background-color:#497adb;
+    color:rgb(235, 200, 6);
 }
 
 
@@ -112,21 +126,35 @@ main section .articulos{
     flex-direction: row;
     width:100%;
     justify-content: space-around;
+    padding:10px;
    
 }
 
 main section .article{
     padding: 15px;
     text-align: left;
-    margin: 0px 5px 0px 5px;
+    margin: 10px 5px 0px 5px;
     border-top: 1px solid #ebebeb;
     font-size: 18px;
     display:flex;
     flex-direction: column;
     justify-content: space-around;
+    position:relative;
     gap:10px;
     width:100%;
     background-color: #FFF;
+    transition-property: box-shadow;
+    transition-duration: 200ms;
+}
+main section .article .name{
+    opacity: 0;
+    transition: all ease 500ms;
+}
+
+main section .article:hover .name{
+    /*display:block;*/
+    opacity: 1;
+    
 }
 
 main section .article img{
@@ -136,9 +164,22 @@ main section .article img{
 main section .article .logoEnvio {
     color:#39b54a;
     font-size: 22px;
-    align-self: flex-end;
-    justify-content: center;
-    width: 100%;
+    padding: 5px;
+    width: 2em;
+    height: 1.5em;
+    display: block;
+    position:absolute;
+    left:80%;
+    top:75%;
+    border: 1px solid #39b54a;
+    background: none;
+    border-radius: 35%;
+    transition-property: transform;
+    transition-duration: 2s;
+
+}
+main section .article .logoEnvio:hover{
+    transform:rotateZ(-90deg) scale(1.3);
 }
 
 main section .article .information{
@@ -169,6 +210,7 @@ footer{
     width: 100%;
 }
 
+
 p{font-size:12px;}
 
 
@@ -180,38 +222,93 @@ p{font-size:12px;}
     color:#1259c3;
     font-size:30px;
 }
+footer{
+    background-color:#FFFFFF;  
+    width: 100%;
+}
 
+.textofooter{text-align:center;}
+footer section section .titular{
+    width:100%;
+    font-size:5vw;
+    text-align: center;
+    padding-top:15px;
+    padding-bottom:15px;
+}
 
 .burger-menu{
-    background-color:#1259c3;
     text-align: center;
-    color:#FFFFFF;
+}
+
+.burger-menu i{
+    background-color: #0044AA;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 15px;
+    height: 25px;
+    margin: 5px 0px 15px 0px;
+    padding: 5px;
+    width: 30px;
 }
 
 
-.textofooter{text-align:center;}
 
 
  
 
 @media (max-width: 360px){
-     body main section .article div h3{display:none;}
+     body main section .article .name{opacity: 1;}
      body header .enlaces{display:none;}
      main section .article{width:90%;}
+
 }
 
 @media (min-width:361px){
-    body main section .article {box-shadow: 0px 0px 10px rgb(100,100,100);}
     body header .burger-menu{display:none;}
+    main section .article:hover{
+        max-height:auto;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
 }
 
+/*tablet*/
 @media (min-width:481px) and (max-width:768px){
     #logo-search div{width: 30%;}
     main section .article{width:45%;}
+    header .form{font-size:2vw; }
+    header .form .submit{
+        width: 12.5%;
+    }
+    main section .titular{   font-size:3vw; }
+    main section .article:hover{
+        max-height:auto;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    footer section section .titular{font-size:4vw;}
+    .textofooter{font-size:3vw;}
+    footer section p{font-size:1.5em;}
 }
 
 /*any laptop to desktop*/
 @media (min-width: 769px){
     #logo-search div{width: 30%;}
     main section .article{width:22%;}
+    header .form{ font-size:1.5vw; }
+    header .form .submit{       width: 12.5%;   }
+    main section .titular{   font-size:2.5vw; }
+    footer section{
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
+    }
+
+    footer section section{  width:33%;    }
+    main section .article:hover{
+        max-height:auto;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    footer section section .icons:hover{ color: #39b54a;}
+    footer section section .titular{font-size:2vw;}
 }
