--- a/Ejercitacion_MercadoLiebre/views/register.html
+++ b/Ejercitacion_MercadoLiebre/views/register.html
@@ -20,18 +20,14 @@
                   alt="Mercado Liebre"
                 />
             </div>
-
-            <div id="search-bar">
-                <form>
-                    <input type="text"   
-                            placeholder="Buscar productos, marcas..."
-                            />
-                    <button type="button" id="button">
-                        <i class="fas fa-search-dollar"></i>
-                    </button>
-                </form>
+            <div class ="form" method="GET">
+                <input  type="text"
+                        placeholder="Buscar productos, marcas y más">
+                </input>
+                <div class="submit" id="button" >
+                    <i class="fas fa-search-dollar"></i>
+                </div>
             </div>
-
             <div id="credito">
                 <p><i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de credito</p>
             </div>
@@ -55,7 +51,11 @@
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>  
-
+        <div>   
+            <img src="/images/img-home-banner.jpg" 
+                 alt="Banner"
+                 width="100%"/>
+        </div>
     </header>
     <body class="register">
         <form action="/register" method="POST">
