--- a/Ejercitacion_MercadoLiebre/views/home.html
+++ b/Ejercitacion_MercadoLiebre/views/home.html
@@ -11,8 +11,7 @@
         <link rel="stylesheet" href="/css/normalize.css" type="text/css"/>
         <link rel="stylesheet" href="/css/styles.css" type="text/css"/>
     
-    </head>  
-        
+    </head>        
     <body>
         <header>
             <div id="logo-search">
@@ -22,18 +21,14 @@
                       alt="Mercado Liebre"
                     />
                 </div>
-    
-                <div id="search-bar">
-                    <form>
-                        <input type="text"   
-                                placeholder="Buscar productos, marcas..."
-                                />
-                        <button type="button" id="button">
-                            <i class="fas fa-search-dollar"></i>
-                        </button>
-                    </form>
+                <div class ="form" method="GET">
+                    <input  type="text"
+                            placeholder="Buscar productos, marcas y más">
+                    </input>
+                    <div class="submit" id="button" >
+                        <i class="fas fa-search-dollar"></i>
+                    </div>
                 </div>
-
                 <div id="credito">
                     <p><i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de credito</p>
                 </div>
@@ -219,36 +214,39 @@
         </main>
         <footer>
             <section>
-                <div class="icons">
-                    <i class="fas fa-credit-card"></i>
-                </div>
-                <h2 class="titular">Pago con tarjeta o en efectivo</h2>
-                <p class="textofooter">
-                    Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta 
-                    o efectivo en puntos de pago. ¡Y siempre es seguro!
-                </p>
+                <section>
+                    <div class="icons">
+                        <i class="fas fa-credit-card"></i>
+                    </div>
+                    <h2 class="titular">Pago con tarjeta o en efectivo</h2>
+                    <p class="textofooter">
+                        Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta 
+                        o efectivo en puntos de pago. ¡Y siempre es seguro!
+                    </p>
+                </section>
+                <section>
+                    <div class="icons">
+                        <i class="fas fa-gift"></i>
+                    </div>
+                    <h2 class="titular">Envio gratis desde $ 2.500</h2>
+                    <p class="textofooter">
+                        Solo por estar registrad@ en Mercado Liebre tenés envíos 
+                        gratis en miles de productos. Es un beneficio de Mercado Puntos.
+                    </p>
+                </section>
+                <section>
+                    <div class="icons">
+                        <i class="fas fa-user-shield"></i>
+                    </div>
+                    <h2 class="titular">Seguridad, de principio a fin</h2>
+                    <p class="textofooter">
+                        ¿No te gusta?¡Devolvelo! En Mercado Liebre, no hay nada que
+                        no puedas hacer, porque estás siempre protegid@.
+                    </p>
+                </section>
             </section>
-            <section>
-                <div class="icons">
-                    <i class="fas fa-gift"></i>
-                </div>
-                <h2 class="titular">Envio gratis desde $ 2.500</h2>
-                <p class="textofooter">
-                    Solo por estar registrad@ en Mercado Liebre tenés envíos 
-                    gratis en miles de productos. Es un beneficio de Mercado Puntos.
-                </p>
-            </section>
-            <section>
-                <div class="icons">
-                    <i class="fas fa-user-shield"></i>
-                </div>
-                <h2 class="titular">Seguridad, de principio a fin</h2>
-                <p class="textofooter">
-                    ¿No te gusta?¡Devolvelo! En Mercado Liebre, no hay nada que
-                    no puedas hacer, porque estás siempre protegid@.
-                </p>
-            </section>
-            <section>
+
+            <section> 
                 <p>Copyright &#169 1999-2020 MercadoLiebre S.R.L.</p>
             </section>
         </footer>
